{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 711,
  "lineage": "d009c820-d6a1-d571-b982-5f0a5da454f3",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:loadbalancer/app/alb/46c28c587d7c69c4",
            "arn_suffix": "app/alb/46c28c587d7c69c4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1498222220.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:loadbalancer/app/alb/46c28c587d7c69c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00821e1705797a4f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02391664e43e0a48a"
              },
              {
                "subnet_id": "subnet-0ed68bde31e7db656"
              }
            ],
            "subnets": [
              "subnet-02391664e43e0a48a",
              "subnet-0ed68bde31e7db656"
            ],
            "vpc_id": "vpc-047cdca7ba4256676",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/b4073b458ba164c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/b4073b458ba164c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:loadbalancer/app/alb/46c28c587d7c69c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "certificate_arn": "arn:aws:acm:eu-west-1:970180171170:certificate/4ce2f2de-e6ad-46d4-9123-9880ac72d5da",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404 Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:loadbalancer/app/alb/46c28c587d7c69c4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "assets-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/assets-service-tg/3e14d5ea9c37d533",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/717c23b840bf06aa",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/assets*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/717c23b840bf06aa",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 5,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "auth-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/auth-service-tg/b27bc407d9975673",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/ee2b88a0a88d94d0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/auth*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/ee2b88a0a88d94d0",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "events-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/events-service-tg/df8b00ebaa7c60ee",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/954e264dcc925422",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/events*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/954e264dcc925422",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "jobs-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/jobs-service-tg/86fad9b34a5d85e6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/c70134a289d838dd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/jobs*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/c70134a289d838dd",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 6,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "location-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/location-service-tg/5a0747570d0aa28f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/fcd8b9bc6fc2f372",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/location*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/fcd8b9bc6fc2f372",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "users-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/users-service-tg/eed48c08162e286b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/62362f32587b7c7a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/users*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener-rule/app/alb/46c28c587d7c69c4/3038a693a10be39e/62362f32587b7c7a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:listener/app/alb/46c28c587d7c69c4/3038a693a10be39e",
            "priority": 4,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "assets-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/assets-service-tg/3e14d5ea9c37d533",
            "arn_suffix": "targetgroup/assets-service-tg/3e14d5ea9c37d533",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/assets",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/assets-service-tg/3e14d5ea9c37d533",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "assets-service-tg",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "auth-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/auth-service-tg/b27bc407d9975673",
            "arn_suffix": "targetgroup/auth-service-tg/b27bc407d9975673",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/auth-service-tg/b27bc407d9975673",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-service-tg",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "events-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/events-service-tg/df8b00ebaa7c60ee",
            "arn_suffix": "targetgroup/events-service-tg/df8b00ebaa7c60ee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/events",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/events-service-tg/df8b00ebaa7c60ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "events-service-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "jobs-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/jobs-service-tg/86fad9b34a5d85e6",
            "arn_suffix": "targetgroup/jobs-service-tg/86fad9b34a5d85e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/jobs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/jobs-service-tg/86fad9b34a5d85e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jobs-service-tg",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "location-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/location-service-tg/5a0747570d0aa28f",
            "arn_suffix": "targetgroup/location-service-tg/5a0747570d0aa28f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/location",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/location-service-tg/5a0747570d0aa28f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "location-service-tg",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "users-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/users-service-tg/eed48c08162e286b",
            "arn_suffix": "targetgroup/users-service-tg/eed48c08162e286b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/users",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:970180171170:targetgroup/users-service-tg/eed48c08162e286b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "users-service-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-00821e1705797a4f3",
            "description": "Allow inbound traffic from the Internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00821e1705797a4f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "assets-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-08bd169bbc3d6909f",
            "description": "Allow inbound traffic from the ALB to the assets-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bd169bbc3d6909f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3004
              }
            ],
            "name": "assets-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "auth-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-07d251026319be676",
            "description": "Allow inbound traffic from the ALB to the auth-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d251026319be676",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3003
              }
            ],
            "name": "auth-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "events-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-0e3a4d95ee4d94de2",
            "description": "Allow inbound traffic from the ALB to the events-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3a4d95ee4d94de2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "events-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "jobs-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-05c88f7d2eb261bb0",
            "description": "Allow inbound traffic from the ALB to the jobs-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c88f7d2eb261bb0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3005
              }
            ],
            "name": "jobs-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "location-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-0f03beb99e90d3051",
            "description": "Allow inbound traffic from the ALB to the location-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f03beb99e90d3051",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3002
              }
            ],
            "name": "location-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": "users-service",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-00bd02bb7a8d16ce0",
            "description": "Allow inbound traffic from the ALB to the users-service service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bd02bb7a8d16ce0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00821e1705797a4f3"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "users-service-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb_sg",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.opensearch",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-07f651aa46102a5fa",
            "description": "Private security group for OpenSearch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f651aa46102a5fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "meetmap-app-opensearch-private-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain.aws_acm_certificate.certificate",
            "module.ecs.aws_cloudwatch_log_group.log_group",
            "module.ecs.aws_ecr_repository.repository",
            "module.ecs.aws_ecr_repository_policy.policy",
            "module.ecs.aws_ecs_cluster.main",
            "module.ecs.aws_ecs_service.this",
            "module.ecs.aws_ecs_task_definition.this",
            "module.ecs.aws_iam_role.ecs_task_execution_role",
            "module.ecs.aws_iam_role_policy_attachment.ecs_task_execution_role_attachment",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http_listener",
            "module.ecs.aws_lb_listener.https_listener",
            "module.ecs.aws_lb_listener_rule.lb_rule",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_iam_policy_document.ecr-allow-push-pull-policy",
            "module.secrets.data.aws_secretsmanager_secret_version.creds",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073f6050950b857e4",
            "association_id": "eipassoc-06ad34d8765b851fa",
            "domain": "vpc",
            "id": "eipalloc-073f6050950b857e4",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01353c08d27597413",
            "private_dns": "ip-10-0-0-201.eu-west-1.compute.internal",
            "private_ip": "10.0.0.201",
            "public_dns": "ec2-3-248-88-195.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.88.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:internet-gateway/igw-0b5e9beb682edae38",
            "id": "igw-0b5e9beb682edae38",
            "owner_id": "970180171170",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0629a22291801c9c3",
            "original_route_table_id": "rtb-0194704fb13e40ca4",
            "route_table_id": "rtb-007d072d325b45d8e",
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073f6050950b857e4",
            "association_id": "eipassoc-06ad34d8765b851fa",
            "connectivity_type": "public",
            "id": "nat-06b6480e51e60b080",
            "network_interface_id": "eni-01353c08d27597413",
            "private_ip": "10.0.0.201",
            "public_ip": "3.248.88.195",
            "subnet_id": "subnet-0ed68bde31e7db656"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:route-table/rtb-038dde4852e1bd76e",
            "id": "rtb-038dde4852e1bd76e",
            "owner_id": "970180171170",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b6480e51e60b080",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:route-table/rtb-007d072d325b45d8e",
            "id": "rtb-007d072d325b45d8e",
            "owner_id": "970180171170",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5e9beb682edae38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff5d6b8e8494d2f",
            "route_table_id": "rtb-038dde4852e1bd76e",
            "subnet_id": "subnet-0a7def6888dbc3cbb"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6f8b491c7c8af6c",
            "route_table_id": "rtb-038dde4852e1bd76e",
            "subnet_id": "subnet-07ae12370d5580cf4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:subnet/subnet-0a7def6888dbc3cbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7def6888dbc3cbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970180171170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 0"
            },
            "tags_all": {
              "Name": "Private Subnet 0"
            },
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:subnet/subnet-07ae12370d5580cf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae12370d5580cf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970180171170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:subnet/subnet-0ed68bde31e7db656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed68bde31e7db656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970180171170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 0"
            },
            "tags_all": {
              "Name": "Public Subnet 0"
            },
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:subnet/subnet-02391664e43e0a48a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02391664e43e0a48a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970180171170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "meetmap-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:vpc/vpc-047cdca7ba4256676",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055210af289b55fda",
            "default_route_table_id": "rtb-007d072d325b45d8e",
            "default_security_group_id": "sg-04bb96f546c186fe1",
            "dhcp_options_id": "dopt-0abf46da55c90e99e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047cdca7ba4256676",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007d072d325b45d8e",
            "owner_id": "970180171170",
            "tags": {
              "Name": "meetmap-vpc"
            },
            "tags_all": {
              "Name": "meetmap-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:970180171170:security-group/sg-0471b48dad93604e6",
            "description": "Allow inbound traffic from port 443, to the VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0471b48dad93604e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpn-sg",
            "name_prefix": "",
            "owner_id": "970180171170",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047cdca7ba4256676"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.meetmap-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}